2009-02-19
Added a few more status features to the cron.php plugin
Fixed state for cron.php script using globals in the db_watch_list module
Changed the $mysql->get() and $mysql->set() functions to $mysql->query() and improved the API for accessing the database
Changed the cron script to use db_watch and db_watch_list modules for checking changed on the filesystem and adding files to the database
	This will potenially allow us to load any directory on the file while it is being browsed
Made improvements on sql queries which should allow easier parsing for different database types in the future
Started on db_albums and db_artists, abstraction level is perfect for code readability and minimizing repeated code

2009-02-18
Abstracted db_archive and db_diskimage module to using the db_file::get and db_file::cleanup functions
Fixed abstraction in all the modules, they can now specify modifiers and pass the $request to the file module
Fixed some problems with archive and diskimage modules, handles wasn't working on Windows because apprently <file>.zip\ also exists instead of exiting the for loop
Fixed counting in fs_archive and fs_diskimage, the matching and the !in_array was throwing off the count
Blogged about site
Migrated to new repository
Removed some unnessicary files from EXT JS template
Removed excess .htaccess files from all the subdirectories and put it in a location match

2009-02-17
Finished adding db_diskimage, time for some curl! for downloading movie information
Fixed db_archive and db_diskimage, there was a problem with showing the directory because it was acting like the fs_ version which is completely different
Archives not list out all directories properly even if the central directory doesn't specify one
Fixed db_archive module when adding zip files to database
Adding a nice percent complete print out in db_files module
Fixed cron.php plugin, it wasn't loading the state properly