@@ -1,3 +1,7 @@
+2009-02-20
+Make cleanup faster by having the other modules check if their paths are still in the files database instead?  it is still a lot of queries but would it be faster then checking the file system?
+  maybe instead of string compares, the IDs can be used, this would take some refactoring of each module
+
 2009-02-19
 FIX state for cron script
 Make db_watch_list module check to make sure directory is actually in the watch and not ignored
